# move-mouse-macOS

./: README.md  main.py  pyproject.toml
.github/workflows/: release.yml
move_mouse_mac/: __init__.py  cli.py
